interchange (5.10.0-1) unstable; urgency=low

  * New upstream release (Closes: #816657, thanks to Robert James Clay
    <jame@rocasa.us>).
  * Fixes UI installation error (Closes: #687904,
    thanks to Toni Mueller <support@oeko.net>).
  * Remove superfluous space before question mark from Debconf template
    (Closes: #584513, thanks to Helge Kreutzmann <debian@helgefjell.de>
    for the report)
  * Remove empty crontab manual page after build.
  
 -- Stefan Hornburg (Racke) <racke@linuxia.de>  Thu, 21 Apr 2016 13:37:32 +0200

interchange (5.7.7-1) unstable; urgency=low

  * New upstream release.
  * Add patch to use Digest::SHA instead of Digest::SHA1 (Closes: #625904,
    thanks to Salvatore Bonaccorso <carnil@debian.org> for the report)
  
 -- Stefan Hornburg (Racke) <racke@linuxia.de>  Mon, 22 Aug 2011 11:57:41 +0200

interchange (5.7.6-2) unstable; urgency=low

  * Fix pending l10n issues, thanks to Christian Perrier
    <bubulle@debian.org> for the patch. Debconf translations:
    - Czech (Martin Sin).  Closes: #589291
    - Italian (Vincenzo Campanella).  Closes: #597310
    - Danish (Joe Hansen).  Closes: #599668
    - Finnish (Esko Arajärvi).  Closes: #600633

 -- Stefan Hornburg (Racke) <racke@linuxia.de>  Wed, 20 Oct 2010 09:25:07 +0200

interchange (5.7.6-1) unstable; urgency=high

  * new upstream release, fixes potential HTTP response splitting
    vulnerability (Closes: #575366)
  * running in PreFork mode requires Tie::ShadowHash module, dependency
    added to interchange package (Closes: #571694)

 -- Stefan Hornburg (Racke) <racke@linuxia.de>  Thu, 25 Mar 2010 10:18:41 +0100

interchange (5.7.4-2) unstable; urgency=low

  * allowed SOAP actions in the configuration file
  * updated Portuguese translation of Debconf templates (Closes: #563165,
    thanks to Américo Monteiro <a_monteiro@netcabo.pt>)
  * updated Russian translation of Debconf templates (Closes: #563645,
    thanks to Yuri Kozlov <yuray@komyakino.ru>)